--- a/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.html
+++ b/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.html
@@ -1,39 +1,41 @@
 <app-corousel-img></app-corousel-img>
 <div class="card-columns">
-    <div routerLink="/compras" class="card text-center">
+    <div  (click)="filtrar('Tecnologia')" class="card text-center">
         <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay">
-            <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">LAPTOPS</a> 
+            <a routerLink="/compras"  href="" class="btn btn-carrito1 btn-sm">TECNOLOGIA</a>
         </div>
     </div>
-    <div class="card text-center">
-        <img src="assets/images/products/card4.jpg" class="card-img-top" alt="">
+    <div routerLink="/compras" class="card text-center">
+        <img src="assets/images/products/muebleria3.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
-            <a href="" class="btn btn-carrito btn-sm">GLASSES</a> 
+            <a routerLink="/compras" href="" class="btn btn-carrito btn-sm">HOGAR</a>
         </div>
     </div>
-    <div class="card text-center">
+    <div routerLink="/compras" class="card text-center">
         <img src="assets/images/products/card3.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
-            <a href="" class="btn btn-carrito btn-sm">PHONES</a>
+            <a routerLink="/compras" href="" class="btn btn-carrito btn-sm">CELULARES</a>
         </div>
     </div>
+
     <div routerLink="/compras" class="card text-center">
-        <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
-        <div class="card-img-overlay">
-            <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">LAPTOPS</a> 
+        <img src="assets/images/products/vestimenta-min.jpg" class="card-img-top" alt="">
+        <div class="card-img-overlay text-center">
+            <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">VESTIMENTA</a>
         </div>
     </div>
+
     <div routerLink="/compras" class="card text-center">
-        <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
+      <img src="assets/images/products/juve.png" class="card-img-top" alt="">
+      <div class="card-img-overlay">
+          <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">DEPORTES</a>
+      </div>
+  </div>
+    <div routerLink="/compras" class="card text-center ">
+        <img src="assets/images/products/instrumentos.jpg" class="card-img-top" alt="">
         <div class="card-img-overlay text-center">
-            <a routerLink="/compras" href="" class="btn btn-carrito1 btn-sm">LAPTOPS</a>
-        </div>
-    </div>
-    <div class="card text-center ">
-        <img src="assets/images/products/card2.jpg" class="card-img-top" alt="">
-        <div class="card-img-overlay text-center">
-            <a href="" class="btn btn-carrito btn-sm">BAGS</a>
+            <a routerLink="/compras" href="" class="btn btn-carrito btn-sm">INSTRUMENTOS</a>
         </div>
     </div>
 
