--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -77,7 +77,7 @@
 
     <div class="row" style="margin-right: 1%;">
 
-
+      <ng-container *ngIf="!terminoCategoria">
       <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas" *ngFor="let producto of trueArray ; let i = index;">
 
           <div class="contenedor-img text-center">
@@ -102,7 +102,7 @@
           </div>
 
       </div>
-
+    </ng-container>
 
       <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas" *ngFor="let pro of encontrados ; let i = index;">
         <div class="contenedor-img text-center">
