--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -77,7 +77,7 @@
 
     <div class="row" style="margin-right: 1%;">
 
-      <ng-container *ngIf="!terminoCategoria">
+    <ng-container *ngIf="!terminoCategoria">
       <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas" *ngFor="let producto of trueArray ; let i = index;">
 
           <div class="contenedor-img text-center">
@@ -96,7 +96,7 @@
                 </strong>
               </div>
               <div class="flip-card-back">
-                <a href="" class="btn btn-carrito">Agregar al carrito</a>
+                <a (click)="addCarrito(producto.product_id.id)" class="btn btn-carrito">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -121,16 +121,14 @@
               </strong>
             </div>
             <div class="flip-card-back">
-              <a href="" class="btn btn-carrito">Agregar al carrito</a>
+              <a (click)="addCarrito(product.product_id.id)" class="btn btn-carrito">Agregar al carrito</a>
             </div>
           </div>
         </div>
       </div>
-
     </div>
-
 
   </div>
 
-  <router-outlet></router-outlet>
+ 
 </div>
