Filtros de home. Otras correciones menores

--- a/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.css
+++ b/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.css
@@ -15,7 +15,14 @@
     color: white;
     outline: none;
     border: none;
-    
+
+}
+
+.btn-regresar {
+  display: block;
+  margin: auto;
+  color:white;
+  background-color: orange;
 }
 
 .card-columns {
@@ -24,7 +31,7 @@
     margin-left: 100px;
     margin-right: 100px;
     margin-block-end: 10px;
-    
+
 }
 
 .card {
