--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -121,14 +121,16 @@
               </strong>
             </div>
             <div class="flip-card-back">
-              <a (click)="addCarrito(product.product_id.id)" class="btn btn-carrito">Agregar al carrito</a>
+              <a (click)="addCarrito(pro.product_id.id)" class="btn btn-carrito">Agregar al carrito</a>
             </div>
           </div>
         </div>
       </div>
+
+
     </div>
 
   </div>
 
- 
+
 </div>
