--- a/frontend/ecommerce/src/app/components/shared/corousel-cards/corousel-cards.component.css
+++ b/frontend/ecommerce/src/app/components/shared/corousel-cards/corousel-cards.component.css
@@ -7,3 +7,8 @@
     background-size: cover;
     box-shadow: gray;
 }
+
+.carousel-control-next,
+.carousel-control-prev {
+    filter: invert(100%);
+}
