--- a/frontend/ecommerce/src/app/pages/home/cart/cart.component.html
+++ b/frontend/ecommerce/src/app/pages/home/cart/cart.component.html
@@ -14,6 +14,7 @@
                             <th>Precio</th>
                             <th>Cantidad</th>
                             <th>Subtotal</th>
+                            <th>Borrar</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -33,6 +34,12 @@
                             </td>
                             <td>
                                 {{ cartService.subtotal(i) }}
+                            </td>
+                            <td>
+                                <button class="btn btn-small btn-danger" (click)="cartService.deleteProductCarrito(i)">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                                
                             </td>
                         </tr>
                         <tr class="border-0">
