--- a/frontend/ecommerce/src/app/pages/home/cart/cart.component.html
+++ b/frontend/ecommerce/src/app/pages/home/cart/cart.component.html
@@ -33,7 +33,7 @@
                                 </form>
                             </td>
                             <td>
-                                {{ cartService.subtotal(i) }}
+                                {{ cartService.subtotal(i)}}
                             </td>
                             <td>
                                 <button class="btn btn-small btn-danger" (click)="cartService.deleteProductCarrito(i)">
@@ -55,8 +55,11 @@
 
             <div class="col-md-12 d-flex mb-5">
                 <div class="d-flex w-100 justify-content-between flex-sm-column flex-md-row">
-                  <a class="btn btn-danger btn-sm order-1">Checkout</a>
-                  <a routerLink="/compras" class="btn btn-success btn-sm order-0">Continua Comprando</a>
+                  <a class="btn btn-danger btn-lg order-1" routerLink="/checkout">Checkout</a>
+                  <a routerLink="/compras" class="btn btn-success btn-lg order-0">
+                    <i class="fa fa-cart-arrow-down"></i>
+                    Continua Comprando!
+                  </a>
                 </div>
             </div>
 
