Cosas que no funcioanan

--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -39,6 +39,6 @@
     </div>
   </div>
   <p class="footer-bottom-text">
-    Todos los derechos reservados por &copy; Phoenix Store. 2020
+    Todos los derechos reservados por &copy; Phoenix Store. 2020 V3
   </p>
 </footer>
