--- a/frontend/ecommerce/src/app/pages/home/landing/landing.component.html
+++ b/frontend/ecommerce/src/app/pages/home/landing/landing.component.html
@@ -1,7 +1,8 @@
 <app-box-cards></app-box-cards>
 
 <div class="barra" >
-    <h1 class="text-center py-3">PRODUCTOS DESTACADOS</h1>
+    <h1 class="text-center py-3"> PRODUCTOS DESTACADOS </h1>
+    <span></span>
 </div>
 
 <app-corousel-cards></app-corousel-cards>
