--- a/frontend/ecommerce/src/app/pages/home/detalle-producto/detalle-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/home/detalle-producto/detalle-producto.component.html
@@ -22,16 +22,30 @@
         <h3> Precio de venta HNL. {{ detalleProducto?.product_id.price }}</h3>
         <label for="" class="labels">Formas de pago</label><br/>
         <br>
-        <div class="row">
+        <div class="row" *ngIf="auth.estaAutenticado()">
           <div class="">
-            <div class="paypal-panelDetalle mx-5">
-              <app-paypal></app-paypal>
+            <div class="paypal-panelDetalle mx-5" >
+              <ng-container *ngIf="auth.estaAutenticado()"><app-paypal></app-paypal></ng-container>
+              
             </div>
           </div>
           <div class="mx-4">
             <button type="Button" class="btn btn-carrito mx-3 lg-2" (click)="handleAddProduct()">Agregar al carrito 
               <a class="mx-2"><img src="assets/icons/carritoRojo.png" style="width: 20px;" alt=""></a>
             </button>
+          </div> 
+        </div>
+        <div class="row" *ngIf="!auth.estaAutenticado()">
+          <div class="">
+            <div class="paypal-panelDetalle mx-5">
+              
+            </div>
+          </div>
+          <div class="mx-4">
+            <a routerLink="/login"><button type="Button" class="btn btn-carrito mx-3 lg-2" >Agregar al carrito 
+              <a class="mx-2"><img src="assets/icons/carritoRojo.png" style="width: 20px;" alt=""></a>
+            </button></a>
+            
           </div> 
         </div>
       </div>
