deploy in firebase

--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -1,13 +1,13 @@
 
 <ng-container *ngIf="cuenta">
-<div class="container bootstrap  " *ngIf="cuenta.id==cuenta_id" >
+<div class="container" *ngIf="cuenta.id==cuenta_id" >
     <form action="">
     <div class="row">
   	<div class="col-sm-3 " ><!--left col-->
       <br>
       <div class="text-center">
         <div class="uno">
-            <img src="{{cuenta.user_img.img_route}}" class=" m-0 b-0 p-0 imag" alt="avatar" height="250px" width="250px">
+            <img src="{{cuenta.user_img.img_route}}" class="m-0 b-0 p-0 imag" alt="avatar" height="250px" width="250px">
         </div>
         <br>
         <div class="col-sm-10 text-center">
