--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -18,7 +18,6 @@
                               <li class="hot"><a >Ofertas</a>
                                   <ul class="submenu">
                                       <li><a routerLink="/landing"> Mas vendidos</a></li>
-
                                   </ul>
                               </li>
                               <li><a >Ventas</a>
@@ -45,7 +44,10 @@
                         <ul class="submenu">
                             <li><a routerLink="/perfil">Perfil</a></li>
                             <li><a routerLink="/misProductos">Mis Productos</a></li>
-                            <li><a class="btn btn-outline-danger" (click)="salir()">Cerrar Sesión</a></li>
+                            <li><a class="btn btn-sm btn-outline-danger" (click)="salir()">
+                              <i class="fa fa-expeditedssl"></i>
+                              Cerrar Sesión
+                            </a></li>
                         </ul>
                       <li><a routerLink="/shopping"><img src="assets/images/icon/carrito.png" style="width: 30px;" alt=""></a>
                       </li>
