Mensaje -Producto no encontrado-. Ruta 404 cambiada al modulo superior

--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -127,6 +127,9 @@
         </div>
       </div>
 
+      <div *ngIf="noEncontrado" style="text-align: center;">
+        <h1>Producto no encontrado</h1>
+      </div>
 
     </div>
 
