Data de la api offline

--- a/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.css
+++ b/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.css
@@ -18,6 +18,15 @@
 
 }
 
+.btn-categ {
+  color: white !important;
+
+}
+
+.btn-categ:hover {
+  color: black !important;
+}
+
 .btn-regresar {
   display: block;
   margin: auto;
