--- a/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.html
+++ b/frontend/ecommerce/src/app/components/shared/box-cards/box-cards.component.html
@@ -9,39 +9,39 @@
     <div (click)="buscarProducto('Tecnologia')" class="card text-center">
       <img src="assets/images/products/card1.jpg" class="card-img-top" alt="">
       <div class="card-img-overlay">
-          <a href="" class="btn btn-carrito1 btn-sm">TECNOLOGIA</a>
+          <a  class="btn btn-carrito1 btn-sm btn-categ">TECNOLOGIA</a>
       </div>
   </div>
   <div (click)="buscarProducto('Hogar')" class="card text-center">
       <img src="assets/images/products/muebleria3.jpg" class="card-img-top" alt="">
       <div class="card-img-overlay text-center">
-          <a href="" class="btn btn-carrito btn-sm">HOGAR</a>
+          <a  class="btn btn-carrito btn-sm btn-categ">HOGAR</a>
       </div>
   </div>
   <div (click)="buscarProducto('cel')" class="card text-center">
       <img src="assets/images/products/card3.jpg" class="card-img-top" alt="">
       <div class="card-img-overlay text-center">
-          <a href="" class="btn btn-carrito btn-sm">CELULARES</a>
+          <a  class="btn btn-carrito btn-sm btn-categ">CELULARES</a>
       </div>
   </div>
 
   <div (click)="buscarProducto('Vestimenta')" class="card text-center">
       <img src="assets/images/products/vestimenta-min.jpg" class="card-img-top" alt="">
       <div class="card-img-overlay text-center">
-          <a href="" class="btn btn-carrito1 btn-sm">VESTIMENTA</a>
+          <a  class="btn btn-carrito1 btn-sm btn-categ">VESTIMENTA</a>
       </div>
   </div>
 
   <div (click)="buscarProducto('Deportes')" class="card text-center">
     <img src="assets/images/products/juve.png" class="card-img-top" alt="">
     <div class="card-img-overlay">
-        <a href="" class="btn btn-carrito1 btn-sm">DEPORTES</a>
+        <a  class="btn btn-carrito1 btn-sm btn-categ">DEPORTES</a>
     </div>
   </div>
   <div  (click)="buscarProducto('Instrumentos musicales')" class="card text-center ">
       <img src="assets/images/products/instrumentos.jpg" class="card-img-top" alt="">
       <div class="card-img-overlay text-center">
-          <a href="" class="btn btn-carrito btn-sm">INSTRUMENTOS</a>
+          <a class="btn btn-carrito btn-sm btn-categ">INSTRUMENTOS</a>
       </div>
   </div>
   </ng-container>
