Corrigiendo seccion conocenos

--- a/frontend/ecommerce/src/app/pages/home/informacion/informacion.component.html
+++ b/frontend/ecommerce/src/app/pages/home/informacion/informacion.component.html
@@ -1,6 +1,6 @@
 <!--IMAGEN GRANDE-->
 <div class="card bg-dark text-white" style="text-align: center;padding-top: 0px ;padding-bottom: 0px;">
-  <img src="assets/images/about/pexels-photo-2115217.jpeg" class="card-img" alt="..." height="400px" >
+  <img src="assets/images/about/pexels-photo-2115217.jpeg" class="card-img" alt="..."  >
   <div class="card-img-overlay" style="padding-top: 50px;">
     <p class="card-title" style="color: black; font-size: 70px;font-size: calc(1em + 1vw)"><b class="text-white"><br>¿QUIENES SOMOS?</b></p>
     <p style="color:black;  font-size: 50px;font-size: calc(1em + 1vw)"><b class="text-white">¡Somos tu mejor opción en compras en línea!<br>Brindandote una alta gama de productos a tu alcance.</b></p> <br>
@@ -12,7 +12,7 @@
 <div class="row row-cols-1 row-cols-md-2 " style="text-align: center;">
   <div class="col mb-4 " >
     <div class="card">
-      <img src="assets/images/about/mision.jpg" class="card-img-top" alt="..." style="height: 200px;">
+      <img src="assets/images/about/mision.jpg" class="card-img-top" alt="..." id="cuadro">
       <div class="card-body">
         <h5 class="card-title"> <b>Misión</b>  </h5>
         <p class="card-text" style="color:black">Darte la mejor experiencia en compras en línea,con los mejores precios para ti,siendo responsables con tus productos y entregas.</p>
@@ -21,7 +21,7 @@
   </div>
   <div class="col mb-3">
     <div class="card">
-      <img src="assets/images/about/vision.jpg" class="card-img-top" alt="..." style="height: 200px;">
+      <img src="assets/images/about/vision.jpg" class="card-img-top" alt="..." id="cuadro">
       <div class="card-body">
         <h5 class="card-title"> <b>Visión</b></h5>
         <p class="card-text " style="color:black">Competir con las mejores empresas ecommerce del mundo,siendo siempre tu mejor opción de compra.</p>
@@ -30,7 +30,7 @@
   </div>
   <div class="col mb-3">
     <div class="card">
-      <img src="assets/images/about/compromiso.jpg" class="card-img-top" alt="..." style="height: 200px;">
+      <img src="assets/images/about/compromiso.jpg" class="card-img-top" alt="..." style="height: 220px;">
       <div class="card-body">
         <h5 class="card-title"><b>Compromiso</b></h5>
         <p class="card-text"  style="color:black">Nos comprometemos a darte siempre lo mejor ,que tu experiencia previa y post compra te haga sentirte lo mas satisfecho posible.</p>
