Se soluciono lo tonto de perfil pero a medias

--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -20,10 +20,10 @@
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-three">
           <h2>Siguenos:</h2>
           <p>Apresurate y se parte de la familia del Fenix, te esperamos, por que eres tu quien mueve esta empresa. </p>
-          <a href=""><i class="fa fa-facebook"></i></a>
-          <a href=""><i class="fa fa-twitter"></i></a>
-          <a href=""><i class="fa fa-linkedin"></i></a>
-          <a href=""><i class="fa fa-pinterest"></i></a>
+          <a href="https://web.whatsapp.com/"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.pinterest.com"><i class="fa fa-pinterest"></i></a>
         </div>
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-four">
           <h2>Contactanos</h2>
